--- a/Lucy/LucyText/LucyText.vcxproj
+++ b/Lucy/LucyText/LucyText.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="Dimension.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Town.cpp" />
@@ -123,6 +124,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Documents\Github\Lucy\Lucy\Lucy\pch.h" />
     <ClInclude Include="App.h" />
+    <ClInclude Include="Dimension.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Town.h" />
   </ItemGroup>
