--- a/Lucy/LucyText/LucyText.vcxproj
+++ b/Lucy/LucyText/LucyText.vcxproj
@@ -117,7 +117,7 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Dimension.cpp" />
-    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Town.cpp" />
@@ -125,7 +125,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Dimension.h" />
-    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Town.h" />
