--- a/Lucy/LucyText/LucyText.vcxproj
+++ b/Lucy/LucyText/LucyText.vcxproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="Calculate.h" />
     <ClInclude Include="File.h" />
     <ClInclude Include="Dimension.h" />
     <ClInclude Include="EnemyManager.h" />
